--- a/style.css
+++ b/style.css
@@ -23,6 +23,9 @@ body {
 }
 
 header{
+    font-weight: bold;
+    font-family: 'Arial Black', sans-serif;
+    letter-spacing: 0.2em;
     line-height: 2;
 }
 
